moved images to repo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    </h1> 
 
 <img width="150" height="250
-" src="../Pictures/Saved Pictures/IMG_1505.PNG" 
+" src="IMG_1505.PNG" 
     alt="This is me">    
 
  <!-- ol*6 -->
@@ -59,7 +59,7 @@
         My Favorite Place
     </h1> 
  
- <img width="400" height="175" src="../Pictures/beach.png" 
+ <img width="400" height="175" src="beach.png" 
      alt="This is my favorite place ">    
  
 
