Changed Bio Index

--- a/index.html
+++ b/index.html
@@ -37,18 +37,18 @@
 
     <tbody>
         <tr>
-            <td>Compassion</td>
+            <td>Excel Modeleing</td>
             <td>Bicycling</td>
             <td>Atlanta</td>
         </tr>
         
         <tr>
-            <td>Honesty</td>
+            <td>PowerPoint Jockeying</td>
             <td>College Football</td>
             <td>Birmingham</td>
         </tr>
         <tr>
-            <td>Loyalty</td>
+            <td>Attending Meetings</td>
             <td>Family Time</td>
             <td>Tuscaloosa</td>
         </tr>
