--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <tbody>
         <tr>
-            <td>Excel Modeleing</td>
+            <td>Excel Modeling</td>
             <td>Bicycling</td>
             <td>Atlanta</td>
         </tr>
